--- a/header/header.css
+++ b/header/header.css
@@ -5,3 +5,50 @@
     width: 100%;
     background-color: whitesmoke;
 }
+.container_log__header{
+    display: none;
+    margin-top: 1rem;
+    width: 8rem;
+    margin-left: auto;
+    margin-right: 6.5rem;
+    border: 1px solid #f5f5f5 ;
+    text-align: center;
+    height: 2rem;
+    padding-top: 0.5rem;
+    background-color:whitesmoke ;
+}
+.container_log__header--ativo{
+    
+    margin-top: 1rem;
+    width: 8rem;
+    margin-left: auto;
+    margin-right: 8.5rem;
+    border: 1px solid #f5f5f5 ;
+    text-align: center;
+    height: 2rem;
+    padding-top: 0.5rem;
+    background-color:whitesmoke ;
+}
+.container_likes__header{
+    display: none;
+    margin-top: 0.5rem;
+    width: 15rem;
+    border: 1px solid#f5f5f5 ;;
+    margin-right: 6.5rem;
+    background-color: whitesmoke;
+    margin-left: auto;
+    height: 4rem;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+.container_likes__header--ativo{
+    margin-top: 0.5rem;
+    width: 15rem;
+    border: 1px solid#f5f5f5 ;;
+    margin-right: 6.5rem;
+    background-color: whitesmoke;
+    margin-left: auto;
+    height: 4rem;
+    overflow: scroll;
+    overflow-x: hidden;
+}
