--- a/header/link.css
+++ b/header/link.css
@@ -6,3 +6,10 @@
 .link__header--icones{
     margin-right: 2rem;
 }
+.link_like__header{
+    margin-top: 1rem;
+    display: flex;
+    text-decoration: none;
+    color: black;
+    margin-bottom: 1rem;
+}
