--- a/perfil/container_header.css
+++ b/perfil/container_header.css
@@ -1,7 +1,12 @@
+.container_tudo__perfil{
+    margin-left: auto;
+    margin-right: auto;
+}
 .container_header_bio__perfil{
     width: 89.6%;
-    border-bottom: 1px solid;
-    margin-left: 5.8rem;
+    border-bottom: 1px solid #f5f5f5;
+    margin-left: auto;
+    margin-right: auto;
 }
 .container_header__perfil{
     display: flex;
