--- a/perfil/link.css
+++ b/perfil/link.css
@@ -1,4 +1,6 @@
 .link__perfil{
-    margin: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-right: 3.9rem;
     background-color: white;
 }
