--- a/postagem/container.css
+++ b/postagem/container.css
@@ -1,9 +1,10 @@
 .container__postagem{
-    margin-left: 39%;
-    margin-top: 20%;
-    width: 130%;
+    margin-left: auto;
+    margin-top: 8rem;
+    width: 40%;
     border: 1px solid #f5f5f5;
     margin-bottom: 1rem;
+    margin-right: auto;
     
 }
 .container_comentario__postagem{
