--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -67,9 +67,13 @@
                 <H1 class="Titulo__login">Thingram</H1>
                 <form class="form__login" action="">
                     <label class="label__login" for=""> Digite aqui o seu email</label>
-                    <input class="input__login--texto" type="email" name="" id="" placeholder="email">
+                    <input class="input__login--texto" type="email" name="email" id="" placeholder="email">
+                    <label class="label__login" for="">Digite aqui o nome do seu perfil</label>
+                    <input class="input__login--texto" type="text" name="nome" id="" placeholder="seu perfil">
                     <label class="label__login" for="">Digite aqui a sua senha</label>
-                    <input class="input__login--texto" type="password" name="" id="" placeholder="senha">
+                    <input class="input__login--texto" type="password" name="senha" id="" placeholder="senha">
+                    <label class="label__login" for="">Digite novamente a sua senha</label>
+                    <input class="input__login--texto" type="password" name="senha2" id="" placeholder="senha">
                     <input class="input__login--submit" type="submit" value="Login" >
                 </form>
             </div>
