Acrescentando mais funcionalidades ao Back-end e arrumando alguns css

--- a/instagram/templates/base.html
+++ b/instagram/templates/base.html
@@ -55,6 +55,10 @@
         <link rel="stylesheet" href="{% static 'css/login_cadastro/input.css' %}">
         <link rel="stylesheet" href="{% static 'css/login_cadastro/titulo.css' %}">
         <link rel="stylesheet" href="{% static 'css/login_cadastro/label.css' %}">
+        <link rel="stylesheet" href="{% static 'css/visualizar_post/container.css' %}">
+        <link rel="stylesheet" href="{% static 'css/visualizar_post/imagem.css' %}">
+        <link rel="stylesheet" href="{% static 'css/visualizar_post/titulo.css' %}">
+        <link rel="stylesheet" href="{% static 'css/visualizar_post/lista.css' %}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
