--- a/instagram/templates/busca.html
+++ b/instagram/templates/busca.html
@@ -1,111 +1,23 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 {% load static %}
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="header/header.css">
-        <link rel="stylesheet" href="header/ul.css">
-        <link rel="stylesheet" href="header/input.css">
-        <link rel="stylesheet" href="header/titulo.css">
-        <link rel="stylesheet" href="header/link.css">
-        <link rel="stylesheet" href="header/icones.css">
-        <link rel="stylesheet" href="header/div.css">
-        <link rel="stylesheet" href="header/lista.css">
-        <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="sugestoes/container.css">
-        <link rel="stylesheet" href="sugestoes/perfil_user.css">
-        <link rel="stylesheet" href="sugestoes/titulo.css">
-        <link rel="stylesheet" href="sugestoes/link.css">
-        <link rel="stylesheet" href="sugestoes/lista.css">
-        <link rel="stylesheet" href="postagem/usuario.css">
-        <link rel="stylesheet" href="postagem/container.css">
-        <link rel="stylesheet" href="postagem/titulo.css">
-        <link rel="stylesheet" href="postagem/div_user.css">
-        <link rel="stylesheet" href="postagem/link.css">
-        <link rel="stylesheet" href="postagem/imagem.css">
-        <link rel="stylesheet" href="postagem/ul.css">
-        <link rel="stylesheet" href="postagem/botao.css">
-        <link rel="stylesheet" href="postagem/input_comentario.css">
-        <link rel="stylesheet" href="postagem/comentarios.css">
-        <link rel="stylesheet" href="perfil/container_header.css">
-        <link rel="stylesheet" href="perfil/imagem.css">
-        <link rel="stylesheet" href="perfil/ul.css">
-        <link rel="stylesheet" href="perfil/lista.css">
-        <link rel="stylesheet" href="perfil/titulo.css">
-        <link rel="stylesheet" href="perfil/biografia.css">
-        <link rel="stylesheet" href="perfil/lista_bio.css">
-        <link rel="stylesheet" href="perfil/container_postagens.css">
-        <link rel="stylesheet" href="perfil/link.css">
-        <link rel="stylesheet" href="perfil/input.css">
-        <link rel="stylesheet" href="direct/container.css">
-        <link rel="stylesheet" href="direct/titulo.css">
-        <link rel="stylesheet" href="direct/ul.css">
-        <link rel="stylesheet" href="direct/itens.css">
-        <link rel="stylesheet" href="direct/nome.css">
-        <link rel="stylesheet" href="direct/link.css">
-        <link rel="stylesheet" href="busca/container.css">
-        <link rel="stylesheet" href="busca/titulo.css">
-        <link rel="stylesheet" href="busca/imagem.css">
-        <link rel="stylesheet" href="busca/link.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
-    </head>
-    <body>
+{% block content %}
         <div>
-            <header class="header__header">
-                <ul class="container__header">
-                    <a href="#" class="link__header"><li class="titulo__header"><h1>Thingram</h1></li></a>
-                    <li class="lista__header"><form action="#">
-                            <input class="texto__header" type="text" name="" id="">
-                            <input class="botao__header" type="submit"  value="">
-                        </form>
-                    </li>
-                    <div class="div__header">
-                        <a href="" class="link__header link__header--icones" ><li><h2><img class="icone__header" src="casa.png" alt=""></h2></li></a>
-                        <a href="" class="link__header link__header--icones"><li><h2><img class="icone__header" src="balao-de-bate-papo.png" alt=""></h2></li></a>
-                        <a href="" class="link__header link__header--icones"><li><h2><img class="icone__header" src="silhueta-de-formato-simples-de-coracao.png" alt=""></h2></li></a>
-                        <a href="" class="link__header "><li><h2><img class=" icone__header icone__header--perfil" src="usuario-de-perfil.png" alt=""></h2></li></a>
-                    </div>
-                </ul>       
-            </header>
+            {% include 'partials/header.html' %}
             <main class="main">
-                <div class="container__busca">
-                    <h3 class="titulo__busca">Titulo do perfil</h3>
-                
-                    <div class="container_img__busca">
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
+                {% if perfis %}
+                    <div class="container__busca">
+                        {% for perfil in perfis %}
+                            <h3 class="titulo__busca"><a href="{% url 'perfil' perfil.pk %}">{{ perfil.nome }}</a></h3>
+                        {% if postagem %}
+                            <div class="container_img__busca">
+                                {% for post in postagem %}
+                                    <a class="link__busca" href="{% url 'visualizar_post' post.pk %}"> <img class="imagem__busca" src="{{ post.foto.url }}" alt=""></a>  
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                        {% endfor %}
                     </div>
-                </div>
-                <div class="container__busca">
-                    <h3 class="titulo__busca">Titulo do perfil</h3>
-                
-                    <div class="container_img__busca">
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                        <a class="link__busca" href=""> <img class="imagem__busca" src="graficos pai.png" alt=""></a>
-                    </div>
-                </div>
+                {% endif %}   
             </main>
         </div>
-    </body>
-</html>
+{% endblock %}
