--- a/instagram/templates/index.html
+++ b/instagram/templates/index.html
@@ -5,15 +5,15 @@
         <div>
             {% include 'partials/header.html' %}
             <main class="main"> 
-                {% if perfil %} 
+                {% if perfils %} 
                     <div class="container__sugestoes">
-                        <h3><a href=""><img class="usuario__sugestoes usuario__sugestoes--user" src="{{ user.perfil.foto.url }}" alt=""></a></h3>
+                        <h3><a href="{% url 'perfil' user.pk %}"><img class="usuario__sugestoes usuario__sugestoes--user" src="{{ user.perfil.foto.url }}" alt=""></a></h3>
                         <h4 class="titulo__sugestoes">Perfis sugeridos</h4>
                         <ul>
-                            {% for perfis in perfil %}     
+                            {% for perfis in perfils %}     
                         
-                                <li class="lista__sugestoes"><a href=""><img class="usuario__sugestoes" src="{{ perfis.foto.url}}" alt=""></a>
-                                    <a href="" class="link__sugestoes"><p>Titulo do usuario</p></a>
+                                <li class="lista__sugestoes"><a href="{% url 'perfil' perfis.user.pk %}"><img class="usuario__sugestoes" src="{{ perfis.foto.url}}" alt=""></a>
+                                    <a href="{% url 'perfil' perfis.user.pk %}" class="link__sugestoes"><p>{{perfis.nome}}</p></a>
                                     <a href="" class="link__sugestoes link__sugestoes--seguir">Seguir</a>
                                 </li>
                             {% endfor %}
@@ -22,74 +22,35 @@
                 {% endif %}
                 {% if postagens %}
                     {% for post in postagens %}
+                   
                         <div class="container__postagem">
-                    
-                            <div class="container_usuario__postagem">
-                                <img src="{{ post.usuario.foto.url }}" class="usuario__postagem" alt=""> 
-                                <a href="" class="link__postagem"><h5 class="titulo__postagem">{{post.usuario.nome}}</h5></a>
-                            </div>
                             
-                            <img class="imagem__postagem" src="{{post.foto.url}}" alt="">
+                            <div class="container_usuario__postagem">
+                                <a href="{% url 'perfil' post.usuario.pk %}"><img src="{{ post.usuario.foto.url }}" class="usuario__postagem" alt=""></a>
+                                <a href="{% url 'perfil' post.usuario.pk %}" class="link__postagem"><h5 class="titulo__postagem">{{ post.usuario.nome }}</h5></a>
+                            </div>
+                            <a href="{% url 'visualizar_post' post.pk %}"><img class="imagem__postagem" src="{{post.foto.url}}" alt=""></a>
                             <ul class="ul__postagem">
-                                <li> <a href="" class="link__postagem--botao"> <img class="botao__postagem" src="silhueta-de-formato-simples-de-coracao.png" alt=""></a> </li>
-                                <li> <a href="" class="link__postagem--botao"> <img class="botao__postagem" src="balao-de-bate-papo.png" alt=""></a></li>
+                                {% if user in post.like.all %}
+                                <li> <a href="{% url 'like' post.id %}" class="link__postagem--botao"> <h5 class="contador_botao__postagem">{{ post.quantidade_de_like }}</h5>  <img class="botao__postagem" src="{% static 'imagem/silhueta-de-formato-simples-de-coracao.png' %}" alt=""></a> </li>
+                                {% else %}
+                                <li> <a href="{% url 'like' post.id %}" class="link__postagem--botao"> <h5 class="contador_botao__postagem">{{ post.quantidade_de_like }}</h5>   <img class="botao__postagem" src="{% static 'imagem/coracao-branco.png' %}" alt=""></a> </li>
+                                {% endif %}
+                                <li> <a href="" class="link__postagem--botao"> <img class="botao__postagem" src="{% static 'imagem/balao-de-bate-papo.png' %}" alt=""></a></li>
                             
                             </ul>
-                            <div class="container_comentario__postagem">
-                                <input class="input_texto__postagem" type="text" name="" id="" placeholder="adicione um comentario">
-                                <input class="input_botao__postagem" type="submit" value="Postar">
+                            <div class="container_descricao__postagem">
+                                <h6 class="titulo__postagem--descricao">{{post.descricao}}</h6>
                             </div>
+                            <form class="container_comentario__postagem" action="{% url 'comentar' post.pk %}" method="post">{% csrf_token %}
+                                <input class="input_texto__postagem" type="text" name="comentar" id="" placeholder="adicione um comentario">
+                                <input class="input_botao__postagem" type="submit" value="Postar">
+                            </form>
                         </div>
+                  
                     {% endfor %}
                 {% endif %}
             </main>
         </div>
-        <script>
-            function abrirLike(){               
-                let like = document.getElementById('container_like__header');
-                let logout = document.getElementById('container_logout__header')
-                if(like.className ==='container_likes__header'){
-                    if(logout.className ==='container_log__header--ativo'){
-                        logout.classList.remove('container_log__header--ativo')
-                        logout.classList.add('container_log__header')
-                        like.classList.remove('container_likes__header');
-                        like.classList.add('container_likes__header--ativo');
-                    }
-                    else{
-                        like.classList.remove('container_likes__header');
-                        like.classList.add('container_likes__header--ativo');
-                    }              
-                }
-                else{
-                    like.classList.remove('container_likes__header--ativo');
-                    like.classList.add('container_likes__header');
-                    
-                }
-                
-            }
-        </script>
-        <script>
-            function abrirLogout(){
-                let like = document.getElementById('container_like__header');
-                let logout = document.getElementById('container_logout__header');
-                if (logout.className ==='container_log__header'){
-                    if(like.className ==='container_likes__header--ativo'){
-                        like.classList.remove('container_likes__header--ativo');
-                        like.classList.add('container_likes__header');
-                        logout.classList.remove('container_log__header');
-                        logout.classList.add('container_log__header--ativo');
-                    }
-                    else{
-                        logout.classList.remove('container_log__header');
-                        logout.classList.add('container_log__header--ativo');
-                    }
-                    
-                }
-                else{
-                    logout.classList.remove('container_log__header--ativo');
-                    logout.classList.add('container_log__header');
-                    
-                }
-            }
-        </script>
+       
 {% endblock %}
