--- a/setup/static/css/postagem/container.css
+++ b/setup/static/css/postagem/container.css
@@ -14,3 +14,7 @@
     display: flex;
     margin-bottom: 0.5rem;
 }
+.container_descricao__postagem{
+    padding-left: 0.6rem;
+    margin-bottom: 0.5rem;
+}
