--- a/setup/static/css/sugestoes/link.css
+++ b/setup/static/css/sugestoes/link.css
@@ -8,4 +8,12 @@
 .link__sugestoes--seguir{
     color: skyblue;
     font-weight: 400;
+    position:relative;
+    top:0;
+}
+.link__sugestoes--seguir:hover{
+    font-weight: bold;
+    top:-4px;
+    box-shadow:0 4px 4px #999;
+    transition: all .2s ease-in-out;
 }
