Melhorando a função de like

--- a/instagram/templates/base.html
+++ b/instagram/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -59,6 +59,16 @@
         <link rel="stylesheet" href="{% static 'css/visualizar_post/imagem.css' %}">
         <link rel="stylesheet" href="{% static 'css/visualizar_post/titulo.css' %}">
         <link rel="stylesheet" href="{% static 'css/visualizar_post/lista.css' %}">
+        <link rel="stylesheet" href="{% static 'css/publicar/container.css' %}">
+        <link rel="stylesheet" href="{% static 'css/publicar/imagem.css' %}">
+        <link rel="stylesheet" href="{% static 'css/publicar/input.css' %}">
+        <link rel="stylesheet" href="{% static 'css/publicar/label.css' %}">
+        <link rel="stylesheet" href="{% static 'css/editar_perfil/container.css' %}">
+        <link rel="stylesheet" href="{% static 'css/editar_perfil/imagem.css' %}">
+        <link rel="stylesheet" href="{% static 'css/editar_perfil/form.css' %}">
+        <link rel="stylesheet" href="{% static 'css/editar_perfil/label.css' %}">
+        <link rel="stylesheet" href="{% static 'css/editar_perfil/input.css' %}">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
