--- a/setup/static/css/direct/titulo.css
+++ b/setup/static/css/direct/titulo.css
@@ -6,3 +6,14 @@
     padding-bottom: 1.5rem;
     padding-top: 1.5rem;
 }
+.dados_inbox__mensagem{
+    margin-right: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+}
+.conteudo_inbox__mensagem{
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    padding-left: 1rem;
+}
